fixup: More support menu spacing fixes

--- a/labware-library/src/components/website-navigation/styles.css
+++ b/labware-library/src/components/website-navigation/styles.css
@@ -426,6 +426,10 @@
     flex-direction: row;
   }
 
+  .submenu_title {
+    flex: 0 0 8rem;
+  }
+
   .support_group {
     flex-basis: 60%;
     display: flex;
